# scopely-test

./: .env.sample  README.md  docker-compose.yml  pyproject.toml  setup.sh
.docker/: Dockerfile  Dockerfile.db  entrypoint.sh  initial.sql  nginx.conf
app/: app.py  config.py  endpoints.py  initializers.py  main.py
app/containers/: dto.py  player.py
app/middleware/: access_log_middleware.py
app/utils/: cache_connector.py  db_connector.py
