[tool.poetry]
name = "scopely-test"
version = "0.1.0"
description = "Job test"
authors = ["Franco Soto <franco.soto.z@gmail.com>"]
readme = "README.md"
packages = [{include = "scopely_test"}]

[tool.poetry.dependencies]
python = "^3.11"
redis = "^5.0.1"
sqlalchemy = "^2.0.23"
uvicorn = "^0.24.0.post1"
gunicorn = "^21.2.0"
structlog = "^23.2.0"
pydantic = "^2.5.1"
fastapi = "^0.104.1"
pymysql = "^1.1.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

